[NO JIRA] Update dependencies after the release